<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MyProfile">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="264dp"
            android:layout_height="223dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/todo"
            android:padding="30dp"
            app:srcCompat="@drawable/me2" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView2"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/adamina"
            android:paddingTop="10dp"
            android:text="@string/Ozavize_Ogunlade"
            android:textColor="#131010"
            android:textSize="30sp"
            android:textStyle="normal" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/name"
            android:layout_marginTop="5dp"
            android:background="#C6CACA" />

        <TextView
            android:layout_width="375dp"
            android:layout_height="307dp"
            android:layout_below="@id/divider"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="23dp"
            android:fontFamily="@font/fondamento"
            android:paddingTop="10dp"
            android:singleLine="false"
            android:text="@string/multiline"
            android:textColor="#131010"
            android:textSize="20sp" />

    </RelativeLayout>
</ScrollView>